# optimiseDetectorExample

./: CMakeLists.txt
include/: ActionInitialization.h  DetectorConstruction.h  DetectorMessenger.h  EventAction.h  Hit.h  PrimaryGeneratorAction.h  RunAction.hh  SensitiveDetector.h
macros/: detector.mac  gui.mac  init_vis.mac  run.mac
src/: ActionInitialization.cpp  DetectorConstruction.cpp  DetectorMessenger.cpp  EventAction.cpp  Hit.cpp  PrimaryGeneratorAction.cpp  RunAction.cc  SensitiveDetector.cpp  main.cpp
